pme: overlay: Enable config_fingerprintPostResetRunnableForAllClients

--- a/overlay-pe/frameworks/base/core/res/res/values/pe_config.xml
+++ b/overlay-pe/frameworks/base/core/res/res/values/pe_config.xml
@@ -15,6 +15,10 @@
      limitations under the License.
 -->
 <resources>
+    <!-- Whether to post reset runnable for all clients. Needed for some older
+         vendor fingerprint HAL implementations. -->
+    <bool name="config_fingerprintPostResetRunnableForAllClients">true</bool>
+
     <!-- Button backlight -->
     <bool name="config_deviceHasVariableButtonBrightness">true</bool>
 
