--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -23,14 +23,12 @@
     <!-- Doze: does this device support STATE_DOZE and STATE_DOZE_SUSPEND? -->
     <bool name="doze_display_state_supported">false</bool>
 
-    <!-- Whether to enable dimming navigation buttons when wallpaper is not visible, should be
-         enabled for OLED devices to reduce/prevent burn in on the navigation bar (because of the
-         black background and static button placements) and disabled for all other devices to
-         prevent wasting cpu cycles on the dimming animation -->
-    <bool name="config_navigation_bar_enable_auto_dim_no_visible_wallpaper">false</bool>
-
     <!-- The default tiles to display in QuickSettings -->
     <string name="quick_settings_tiles_default" translatable="false">
         wifi,bt,dnd,flashlight,rotation,battery,cell,airplane,night
     </string>
+
+    <!-- Burn in protection -->
+    <bool name="config_statusBarBurnInProtection">true</bool>
+    <integer name="config_shift_interval">40</integer>
 </resources>
