pme: Carbon-ify

--- a/overlay-carbon/frameworks/base/core/res/res/values/carbon_config.xml
+++ b/overlay-carbon/frameworks/base/core/res/res/values/carbon_config.xml
@@ -86,4 +86,7 @@
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
     <integer name="config_longPressOnAppSwitchBehavior">0</integer>
+
+    <!-- Whether device has button lights support -->
+    <bool name="config_button_brightness_support">true</bool> 
 </resources>
